src/main/java/com/turn/splicer/tsdbutils/expression/parser/SyntaxChecker.java
/* Generated By:JavaCC: Do not edit this line. SyntaxChecker.java */
package com.turn.splicer.tsdbutils.expression.parser;

import com.turn.splicer.tsdbutils.TsQuery;
import com.turn.splicer.tsdbutils.expression.ExpressionTree;

import java.util.List;

import com.google.common.base.Joiner;
import com.google.common.collect.Lists;

public class SyntaxChecker implements SyntaxCheckerConstants {

	private TsQuery dataQuery;
	private List<String> metricQueries;

	public void setTsQuery(TsQuery dataQuery) {
		this.dataQuery = dataQuery;
	}

	public void setMetricQueries(List<String> metricQueries) {
		this.metricQueries = metricQueries;
	}

	public static void main(String[] args) {
		try {
			new SyntaxChecker(new java.io.StringReader(args[0])).EXPRESSION();
			System.out.println("Syntax is okay");
		} catch (Throwable e) {
			// Catching Throwable is ugly but JavaCC throws Error objects!
			System.out.println("Syntax check failed: " + e.getMessage());
		}
	}

	final public ExpressionTree EXPRESSION() throws ParseException {
		Token name;
		int paramIndex = 0;
		name = jj_consume_token(NAME);
		ExpressionTree tree = new ExpressionTree(name.image, dataQuery);
		jj_consume_token(7);
		PARAMETER(tree, paramIndex++);
		label_1:
		while (true) {
			if (jj_2_1(5)) {
				;
			} else {
				break label_1;
			}
			jj_consume_token(8);
			PARAMETER(tree, paramIndex++);
		}
		jj_consume_token(9);
		{
			if (true) return tree;
		}
		throw new Error("Missing return statement in function");
	}

	final public void PARAMETER(ExpressionTree tree, int paramIndex) throws ParseException {
		String metric;
		Token param;
		ExpressionTree subTree;
		if (jj_2_2(5)) {
			subTree = EXPRESSION();
			tree.addSubExpression(subTree, paramIndex);
		} else if (jj_2_3(5)) {
			metric = METRIC();
			metricQueries.add(metric);
			tree.addSubMetricQuery(metric, metricQueries.size() - 1, paramIndex);
		} else if (jj_2_4(5)) {
			param = jj_consume_token(NAME);
			tree.addFunctionParameter(param.image);
		} else {
			jj_consume_token(-1);
			throw new ParseException();
		}
	}

	// metric is agg:[interval-agg:][rate:]metric[{tag=value,...}]
	final public String METRIC() throws ParseException {
		Token agg, itvl, rate, metric, tagk, tagv;
		StringBuilder builder = new StringBuilder();
		Joiner JOINER = Joiner.on(",").skipNulls();
		List<String> tagPairs = Lists.newArrayList();
		agg = jj_consume_token(NAME);
		jj_consume_token(10);
		builder.append(agg.image).append(":");
		if (jj_2_5(5)) {
			itvl = jj_consume_token(NAME);
			jj_consume_token(10);
			builder.append(itvl.image).append(":");
		} else {
			;
		}
		if (jj_2_6(5)) {
			rate = jj_consume_token(NAME);
			jj_consume_token(10);
			builder.append(rate.image).append(":");
		} else {
			;
		}
		metric = jj_consume_token(NAME);
		builder.append(metric.image);
		if (jj_2_8(5)) {
			jj_consume_token(11);
			tagk = jj_consume_token(NAME);
			jj_consume_token(12);
			tagv = jj_consume_token(NAME);
			tagPairs.add(tagk + "=" + tagv);
			label_2:
			while (true) {
				if (jj_2_7(5)) {
					;
				} else {
					break label_2;
				}
				jj_consume_token(8);
				tagk = jj_consume_token(NAME);
				jj_consume_token(12);
				tagv = jj_consume_token(NAME);
				tagPairs.add(tagk + "=" + tagv);
			}
			jj_consume_token(13);
		} else {
			;
		}
		if (tagPairs.size() > 0) builder.append("{").append(JOINER.join(tagPairs)).append("}");
		{
			if (true) return builder.toString();
		}
		throw new Error("Missing return statement in function");
	}

	private boolean jj_2_1(int xla) {
		jj_la = xla;
		jj_lastpos = jj_scanpos = token;
		try {
			return !jj_3_1();
		} catch (LookaheadSuccess ls) {
			return true;
		} finally {
			jj_save(0, xla);
		}
	}

	private boolean jj_2_2(int xla) {
		jj_la = xla;
		jj_lastpos = jj_scanpos = token;
		try {
			return !jj_3_2();
		} catch (LookaheadSuccess ls) {
			return true;
		} finally {
			jj_save(1, xla);
		}
	}

	private boolean jj_2_3(int xla) {
		jj_la = xla;
		jj_lastpos = jj_scanpos = token;
		try {
			return !jj_3_3();
		} catch (LookaheadSuccess ls) {
			return true;
		} finally {
			jj_save(2, xla);
		}
	}

	private boolean jj_2_4(int xla) {
		jj_la = xla;
		jj_lastpos = jj_scanpos = token;
		try {
			return !jj_3_4();
		} catch (LookaheadSuccess ls) {
			return true;
		} finally {
			jj_save(3, xla);
		}
	}

	private boolean jj_2_5(int xla) {
		jj_la = xla;
		jj_lastpos = jj_scanpos = token;
		try {
			return !jj_3_5();
		} catch (LookaheadSuccess ls) {
			return true;
		} finally {
			jj_save(4, xla);
		}
	}

	private boolean jj_2_6(int xla) {
		jj_la = xla;
		jj_lastpos = jj_scanpos = token;
		try {
			return !jj_3_6();
		} catch (LookaheadSuccess ls) {
			return true;
		} finally {
			jj_save(5, xla);
		}
	}

	private boolean jj_2_7(int xla) {
		jj_la = xla;
		jj_lastpos = jj_scanpos = token;
		try {
			return !jj_3_7();
		} catch (LookaheadSuccess ls) {
			return true;
		} finally {
			jj_save(6, xla);
		}
	}

	private boolean jj_2_8(int xla) {
		jj_la = xla;
		jj_lastpos = jj_scanpos = token;
		try {
			return !jj_3_8();
		} catch (LookaheadSuccess ls) {
			return true;
		} finally {
			jj_save(7, xla);
		}
	}

	private boolean jj_3_8() {
		if (jj_scan_token(11)) return true;
		if (jj_scan_token(NAME)) return true;
		if (jj_scan_token(12)) return true;
		if (jj_scan_token(NAME)) return true;
		Token xsp;
		while (true) {
			xsp = jj_scanpos;
			if (jj_3_7()) {
				jj_scanpos = xsp;
				break;
			}
		}
		if (jj_scan_token(13)) return true;
		return false;
	}

	private boolean jj_3_1() {
		if (jj_scan_token(8)) return true;
		if (jj_3R_3()) return true;
		return false;
	}

	private boolean jj_3_6() {
		if (jj_scan_token(NAME)) return true;
		if (jj_scan_token(10)) return true;
		return false;
	}

	private boolean jj_3_5() {
		if (jj_scan_token(NAME)) return true;
		if (jj_scan_token(10)) return true;
		return false;
	}

	private boolean jj_3R_5() {
		if (jj_scan_token(NAME)) return true;
		if (jj_scan_token(10)) return true;
		Token xsp;
		xsp = jj_scanpos;
		if (jj_3_5()) jj_scanpos = xsp;
		xsp = jj_scanpos;
		if (jj_3_6()) jj_scanpos = xsp;
		if (jj_scan_token(NAME)) return true;
		xsp = jj_scanpos;
		if (jj_3_8()) jj_scanpos = xsp;
		return false;
	}

	private boolean jj_3_4() {
		if (jj_scan_token(NAME)) return true;
		return false;
	}

	private boolean jj_3_3() {
		if (jj_3R_5()) return true;
		return false;
	}

	private boolean jj_3R_3() {
		Token xsp;
		xsp = jj_scanpos;
		if (jj_3_2()) {
			jj_scanpos = xsp;
			if (jj_3_3()) {
				jj_scanpos = xsp;
				if (jj_3_4()) return true;
			}
		}
		return false;
	}

	private boolean jj_3_2() {
		if (jj_3R_4()) return true;
		return false;
	}

	private boolean jj_3R_4() {
		if (jj_scan_token(NAME)) return true;
		if (jj_scan_token(7)) return true;
		if (jj_3R_3()) return true;
		Token xsp;
		while (true) {
			xsp = jj_scanpos;
			if (jj_3_1()) {
				jj_scanpos = xsp;
				break;
			}
		}
		if (jj_scan_token(9)) return true;
		return false;
	}

	private boolean jj_3_7() {
		if (jj_scan_token(8)) return true;
		if (jj_scan_token(NAME)) return true;
		if (jj_scan_token(12)) return true;
		if (jj_scan_token(NAME)) return true;
		return false;
	}

	/**
	 * Generated Token Manager.
	 */
	public SyntaxCheckerTokenManager token_source;
	SimpleCharStream jj_input_stream;
	/**
	 * Current token.
	 */
	public Token token;
	/**
	 * Next token.
	 */
	public Token jj_nt;
	private int jj_ntk;
	private Token jj_scanpos, jj_lastpos;
	private int jj_la;
	private int jj_gen;
	final private int[] jj_la1 = new int[0];
	static private int[] jj_la1_0;

	static {
		jj_la1_init_0();
	}

	private static void jj_la1_init_0() {
		jj_la1_0 = new int[]{};
	}

	final private JJCalls[] jj_2_rtns = new JJCalls[8];
	private boolean jj_rescan = false;
	private int jj_gc = 0;

	/**
	 * Constructor with InputStream.
	 */
	public SyntaxChecker(java.io.InputStream stream) {
		this(stream, null);
	}

	/**
	 * Constructor with InputStream and supplied encoding
	 */
	public SyntaxChecker(java.io.InputStream stream, String encoding) {
		try {
			jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1);
		} catch (java.io.UnsupportedEncodingException e) {
			throw new RuntimeException(e);
		}
		token_source = new SyntaxCheckerTokenManager(jj_input_stream);
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 0; i++) jj_la1[i] = -1;
		for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
	}

	/**
	 * Reinitialise.
	 */
	public void ReInit(java.io.InputStream stream) {
		ReInit(stream, null);
	}

	/**
	 * Reinitialise.
	 */
	public void ReInit(java.io.InputStream stream, String encoding) {
		try {
			jj_input_stream.ReInit(stream, encoding, 1, 1);
		} catch (java.io.UnsupportedEncodingException e) {
			throw new RuntimeException(e);
		}
		token_source.ReInit(jj_input_stream);
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 0; i++) jj_la1[i] = -1;
		for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
	}

	/**
	 * Constructor.
	 */
	public SyntaxChecker(java.io.Reader stream) {
		jj_input_stream = new SimpleCharStream(stream, 1, 1);
		token_source = new SyntaxCheckerTokenManager(jj_input_stream);
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 0; i++) jj_la1[i] = -1;
		for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
	}

	/**
	 * Reinitialise.
	 */
	public void ReInit(java.io.Reader stream) {
		jj_input_stream.ReInit(stream, 1, 1);
		token_source.ReInit(jj_input_stream);
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 0; i++) jj_la1[i] = -1;
		for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
	}

	/**
	 * Constructor with generated Token Manager.
	 */
	public SyntaxChecker(SyntaxCheckerTokenManager tm) {
		token_source = tm;
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 0; i++) jj_la1[i] = -1;
		for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
	}

	/**
	 * Reinitialise.
	 */
	public void ReInit(SyntaxCheckerTokenManager tm) {
		token_source = tm;
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 0; i++) jj_la1[i] = -1;
		for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
	}

	private Token jj_consume_token(int kind) throws ParseException {
		Token oldToken;
		if ((oldToken = token).next != null) token = token.next;
		else token = token.next = token_source.getNextToken();
		jj_ntk = -1;
		if (token.kind == kind) {
			jj_gen++;
			if (++jj_gc > 100) {
				jj_gc = 0;
				for (int i = 0; i < jj_2_rtns.length; i++) {
					JJCalls c = jj_2_rtns[i];
					while (c != null) {
						if (c.gen < jj_gen) c.first = null;
						c = c.next;
					}
				}
			}
			return token;
		}
		token = oldToken;
		jj_kind = kind;
		throw generateParseException();
	}

	static private final class LookaheadSuccess extends Error {
	}

	final private LookaheadSuccess jj_ls = new LookaheadSuccess();

	private boolean jj_scan_token(int kind) {
		if (jj_scanpos == jj_lastpos) {
			jj_la--;
			if (jj_scanpos.next == null) {
				jj_lastpos = jj_scanpos = jj_scanpos.next = token_source.getNextToken();
			} else {
				jj_lastpos = jj_scanpos = jj_scanpos.next;
			}
		} else {
			jj_scanpos = jj_scanpos.next;
		}
		if (jj_rescan) {
			int i = 0;
			Token tok = token;
			while (tok != null && tok != jj_scanpos) {
				i++;
				tok = tok.next;
			}
			if (tok != null) jj_add_error_token(kind, i);
		}
		if (jj_scanpos.kind != kind) return true;
		if (jj_la == 0 && jj_scanpos == jj_lastpos) throw jj_ls;
		return false;
	}


	/**
	 * Get the next Token.
	 */
	final public Token getNextToken() {
		if (token.next != null) token = token.next;
		else token = token.next = token_source.getNextToken();
		jj_ntk = -1;
		jj_gen++;
		return token;
	}

	/**
	 * Get the specific Token.
	 */
	final public Token getToken(int index) {
		Token t = token;
		for (int i = 0; i < index; i++) {
			if (t.next != null) t = t.next;
			else t = t.next = token_source.getNextToken();
		}
		return t;
	}

	private int jj_ntk() {
		if ((jj_nt = token.next) == null)
			return (jj_ntk = (token.next = token_source.getNextToken()).kind);
		else
			return (jj_ntk = jj_nt.kind);
	}

	private List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
	private int[] jj_expentry;
	private int jj_kind = -1;
	private int[] jj_lasttokens = new int[100];
	private int jj_endpos;

	private void jj_add_error_token(int kind, int pos) {
		if (pos >= 100) return;
		if (pos == jj_endpos + 1) {
			jj_lasttokens[jj_endpos++] = kind;
		} else if (jj_endpos != 0) {
			jj_expentry = new int[jj_endpos];
			for (int i = 0; i < jj_endpos; i++) {
				jj_expentry[i] = jj_lasttokens[i];
			}
			boolean exists = false;
			for (java.util.Iterator<?> it = jj_expentries.iterator(); it.hasNext(); ) {
				exists = true;
				int[] oldentry = (int[]) (it.next());
				if (oldentry.length == jj_expentry.length) {
					for (int i = 0; i < jj_expentry.length; i++) {
						if (oldentry[i] != jj_expentry[i]) {
							exists = false;
							break;
						}
					}
					if (exists) break;
				}
			}
			if (!exists) jj_expentries.add(jj_expentry);
			if (pos != 0) jj_lasttokens[(jj_endpos = pos) - 1] = kind;
		}
	}

	/**
	 * Generate ParseException.
	 */
	public ParseException generateParseException() {
		jj_expentries.clear();
		boolean[] la1tokens = new boolean[14];
		if (jj_kind >= 0) {
			la1tokens[jj_kind] = true;
			jj_kind = -1;
		}
		for (int i = 0; i < 0; i++) {
			if (jj_la1[i] == jj_gen) {
				for (int j = 0; j < 32; j++) {
					if ((jj_la1_0[i] & (1 << j)) != 0) {
						la1tokens[j] = true;
					}
				}
			}
		}
		for (int i = 0; i < 14; i++) {
			if (la1tokens[i]) {
				jj_expentry = new int[1];
				jj_expentry[0] = i;
				jj_expentries.add(jj_expentry);
			}
		}
		jj_endpos = 0;
		jj_rescan_token();
		jj_add_error_token(0, 0);
		int[][] exptokseq = new int[jj_expentries.size()][];
		for (int i = 0; i < jj_expentries.size(); i++) {
			exptokseq[i] = jj_expentries.get(i);
		}
		return new ParseException(token, exptokseq, tokenImage);
	}

	/**
	 * Enable tracing.
	 */
	final public void enable_tracing() {
	}

	/**
	 * Disable tracing.
	 */
	final public void disable_tracing() {
	}

	private void jj_rescan_token() {
		jj_rescan = true;
		for (int i = 0; i < 8; i++) {
			try {
				JJCalls p = jj_2_rtns[i];
				do {
					if (p.gen > jj_gen) {
						jj_la = p.arg;
						jj_lastpos = jj_scanpos = p.first;
						switch (i) {
							case 0:
								jj_3_1();
								break;
							case 1:
								jj_3_2();
								break;
							case 2:
								jj_3_3();
								break;
							case 3:
								jj_3_4();
								break;
							case 4:
								jj_3_5();
								break;
							case 5:
								jj_3_6();
								break;
							case 6:
								jj_3_7();
								break;
							case 7:
								jj_3_8();
								break;
						}
					}
					p = p.next;
				} while (p != null);
			} catch (LookaheadSuccess ls) {
			}
		}
		jj_rescan = false;
	}

	private void jj_save(int index, int xla) {
		JJCalls p = jj_2_rtns[index];
		while (p.gen > jj_gen) {
			if (p.next == null) {
				p = p.next = new JJCalls();
				break;
			}
			p = p.next;
		}
		p.gen = jj_gen + xla - jj_la;
		p.first = token;
		p.arg = xla;
	}

	static final class JJCalls {
		int gen;
		Token first;
		int arg;
		JJCalls next;
	}

}
